add reference to favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="anti-capitalista!! ipsum.">
         <meta name="viewport" content="width=device-width">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
